[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "newton_raphson"
version = "0.0.1"
authors = [
{ name="Stephen Liu", email="stephen.liu@ucalgary.ca" },
]
description="Python package for lab 2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/stephen1iu/goph420-w2024-lab02-stSL/"
